[package]
name = "s3_download"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.86"
async-compression = { version = "0.4.10", features = ["tokio", "zstd"] }
lambda_http = "0.11.1"
lambda_runtime = "0.11.2"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = "1.0.203"
serde_json = "1.0.117"

tokio = { version = "1", features = ["macros", "full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

